saas-minikube-kubernetess/namespaces/hallo/laravel_service.yaml

apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: hallo
spec:
  ports:
    - nodePort: 31422
      port: 80
  selector:
    app: laravel
  type: NodePort
